--- a/client/index-static.html
+++ b/client/index-static.html
@@ -126,7 +126,23 @@
       </form>
     </div>
   </div>
-
+<div class="field is-grouped">
+  <p class="control">
+    <a class="button is-primary">
+      Save changes
+    </a>
+  </p>
+  <p class="control">
+    <a class="button">
+      Cancel
+    </a>
+  </p>
+  <p class="control">
+    <a class="button is-danger">
+      Delete post
+    </a>
+  </p>
+</div>
 
   <!--<div class="row">
     <div class="footer">
