--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
   <link rel='stylesheet' type='text/css' href='../styles/home.css'>
   <link rel='stylesheet' type='text/css' href='../styles/pinboard.css'>
   <link rel='stylesheet' type='text/css' href='../styles/dashboard.css'>
+  <script src="https://apis.google.com/js/client.js"></script>
 </head>
 <body>
   <div id="react-root"></div>
