testing pinboard layout

--- a/client/pinboard.html
+++ b/client/pinboard.html
@@ -106,10 +106,25 @@
           </div>
         </header>
         <section>
-          <p class="title">Main column</p>
-          <p class="subtitle">With some content</p>
-          <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
+          <div class="components-container">
+            <div class="item">
+              <p>This is card 3</p>
+            </div>
+            <div class="item">
+              <p>This is card 2</p>
+            </div>
+            <div class="item">
+              <p>This is card 3</p>
+            </div>
+            <div class="item">
+              <p>This is card 4</p>
+            </div>
+            <div class="item">
+              <p>This is card 5</p>
+            </div>
+            <div class="item">
+              <p>This is card 6</p>
+            </div>
           </div>
         </section>
       </article>
