setted up pinboard content layout and add button css

--- a/client/pinboard.html
+++ b/client/pinboard.html
@@ -92,6 +92,13 @@
             </tbody>
           </table>
         </div>
+        <div class="add-content-container">
+          <div class="add-content add"><i class="fa fa-plus"></i></div>
+          <div class="add-content photo"><i class="fa fa-picture-o"></i></div>
+          <div class="add-content message"><i class="fa fa-comments-o"></i></div>
+          <div class="add-content note"><i class="fa fa-sticky-note-o"></i></div>
+          <div class="add-content voice-message"><i class="fa fa-microphone"></i></div>
+        </div>
       </article>
     </div>
 
