--- a/api_server/app/assets/dashboard.static.html
+++ b/api_server/app/assets/dashboard.static.html
@@ -134,7 +134,7 @@
 
             <tr>
               <th>1</th>
-              <td><a href="" title="this room blah blah blah">Secret Graden</a></td>
+              <td><a href="" title="this room blah blah blah">Secret Garden</a></td>
             </tr>
 
             <tr>
