--- a/api_server/app/assets/index.html
+++ b/api_server/app/assets/index.html
@@ -15,6 +15,7 @@
   <body>
     <div id="react-root"></div>
     <script src="/build/bundle.js"></script>
+    <script src="//developer.appear.in/scripts/appearin-sdk.0.0.4.min.js"></script>
   </body>
 
 </html>
