--- a/api_server/app/assets/index.html
+++ b/api_server/app/assets/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel='stylesheet' type='text/css' href='../styles/home.css'>
-    <link rel='stylesheet' type='text/css' href='../styles/pinboard.css'>
+    <link rel='stylesheet' type='text/css' href='../stylesheets/home.css'>
+    <link rel='stylesheet' type='text/css' href='../stylesheets/pinboard.css'>
   </head>
   <body>
     <div id="react-root"></div>
