--- a/api_server/app/assets/index.html
+++ b/api_server/app/assets/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bridge</title>
+    <script src="https://apis.google.com/js/client.js?onload=googleApiClientReady"></script>
     <!--<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.css">
